--- a/Secciones/perfilDeUsuario.html
+++ b/Secciones/perfilDeUsuario.html
@@ -28,6 +28,7 @@
             <div class="dropdown-content">
               <a href="paginaPrincipal.html">Inicio</a>
               <a href="">Pedido</a>
+              <a href="adminMenuAgregar.html">Administrar Menú</a>
               <a href="../index.html">Cerrar Sesión</a>
             </div>
         </div>
