--- a/Secciones/adminMenuAgregar.html
+++ b/Secciones/adminMenuAgregar.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../Css/menu izquierda.css">
         <link rel="stylesheet" href="../Css/footerHeader.css">
+        <link rel="stylesheet" href="../Css/paginaPrincipal.Css">
+        <link rel="stylesheet" href="../Css/drpdwn.css">
         <title>Administración | Agregar</title>
     </head>
     <body>
@@ -16,15 +18,27 @@
                     <h1>DinerSol - Sistema De Cafeterías UTP</h1>
                 </div>
             </div>
+            <div class="fotoUser">
+                <!-- <h3>Aurelio Morales</h3> -->
+                <div class="dropdown">
+                    <button class="dropbtn"><b>Aurelio Morales</b></button>
+                    <div class="dropdown-content">
+                      <a href="paginaPrincipal.html">Inicio</a>
+                      <a href="">Pedido</a>
+                      <a href="../index.html">Cerrar Sesión</a>
+                    </div>
+                </div>
+                <img class="FPerfil" src="../Imagenes/user.png" alt="Foto De Perfil" width="3%" height="3%">
+            </div>
         </header>
-        <hr>
+        <br><br><hr>
         <h2>Administración del Menú</h2>
         <input type="checkbox" class="CBox" id="CBox1">
         <label class="LBel" for="CBox1">¥</label>
         <div class="LMenu">
             <ul>
-                <a href="EMenu.html"><li>Editar</li></a>
-                <a href="IMenu.html"><li>Inventario</li></a>
+                <a href="adminMenuEditar.html"><li>Editar</li></a>
+                <a href="adminMenuInventario.html"><li>Inventario</li></a>
             </ul>
             </div>
             <div class="H">
@@ -63,13 +77,14 @@
             </section>
         <section>
             <div class="end">
-                <input type="button" id="add" value="Agregar Menú">
+                <input type="submit" id="add" value="Agregar Menú">
             </div>
             <div class="end"><br><br>
                 <input type="button" value="Volver al inicio" onclick="window.location.href='../Secciones/paginaPrincipal.html'"><br><br>
             </div>
         </section>
     </form>
+    <hr>
     <div class="footer">
         <img src="https://yt3.ggpht.com/Y1L8TzdsdTe30KxXrueVXL8N5W9CL3JCR0oiFtlieiTJ4p24mMiDYRNHHuS9nPawWz1vEFO0BZY=s900-c-k-c0x00ffffff-no-rj" alt="UTP Logo" width="6%" height="6%">
         <h3>
