--- a/Secciones/adminMenuInventario.html
+++ b/Secciones/adminMenuInventario.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="../Css/menu izquierda.css">
         <link rel="stylesheet" href="../Css/footerHeader.css">
+        <link rel="stylesheet" href="../Css/paginaPrincipal.Css">
+        <link rel="stylesheet" href="../Css/drpdwn.css">
         <title>Administración | Inventario</title>
     </head>
     <body>
@@ -15,19 +17,31 @@
                 <h3>Universidad Tecnológica De Panamá</h3>
                 <h1>DinerSol - Sistema De Cafeterías UTP</h1>
             </div>
+            <div class="fotoUser">
+              <!-- <h3>Aurelio Morales</h3> -->
+              <div class="dropdown">
+                  <button class="dropbtn"><b>Aurelio Morales</b></button>
+                  <div class="dropdown-content">
+                    <a href="paginaPrincipal.html">Inicio</a>
+                    <a href="">Pedido</a>
+                    <a href="../index.html">Cerrar Sesión</a>
+                  </div>
+              </div>
+              <img class="FPerfil" src="../Imagenes/user.png" alt="Foto De Perfil" width="3%" height="3%">
+            </div>
         </div>
     </header>
-        <hr>
+    <br><br><hr>
         <h2>Administración del Menú</h2>
         <input type="checkbox" class="CBox" id="CBox1">
         <label class="LBel" for="CBox1">¥</label>
         <div class="LMenu">
             <ul>
-                <a href="AMenu.html"><li>Agregar</li></a>
-                <a href="EMenu.html"><li>Editar</li></a>
+                <a href="adminMenuAgregar.html"><li>Agregar</li></a>
+                <a href="adminMenuEditar.html"><li>Editar</li></a>
             </ul>
             </div>
-        <form name="IMenu" method="POST" action="../Secciones/datos.php">
+        <form name="IMenu" method="POST" action="">
         <br><br>
         <div class="item">
             <label class="SH">Lista de Menus Disponibles:</label><br><br>
@@ -100,6 +114,7 @@
           </div>
         </section>
       </form>
+      <hr>
       <div class="footer">
           <img src="https://yt3.ggpht.com/Y1L8TzdsdTe30KxXrueVXL8N5W9CL3JCR0oiFtlieiTJ4p24mMiDYRNHHuS9nPawWz1vEFO0BZY=s900-c-k-c0x00ffffff-no-rj" alt="UTP Logo" width="6%" height="6%">
           <h3>
