--- a/Secciones/estadisticas.html
+++ b/Secciones/estadisticas.html
@@ -23,6 +23,7 @@
                 <div class="dropdown-content">
                   <a href="perfilDeUsuario.html">Mi Perfil</a>
                   <a href="">Pedido</a>
+                  <a href="adminMenuAgregar.html">Administrar Menú</a>
                   <a href="../index.html">Cerrar Sesión</a>
                 </div>
             </div>
