Css de la página adminMenuAgregar

--- a/Secciones/paginaPrincipal.html
+++ b/Secciones/paginaPrincipal.html
@@ -60,7 +60,7 @@
                     <div class="HacerPedido">
                         <h2 class="NombreCafeteria">Menú Del Día</h2>
                         <div>
-                            <button><a href="#">Hacer Pedido</a></button>
+                            <button><a href="hacerPedido.html">Hacer Pedido</a></button>
                         </div>
                     </div>
                     <div class="ComidasDeCafeterias">
