--- a/Secciones/adminMenuAgregar.html
+++ b/Secciones/adminMenuAgregar.html
@@ -3,22 +3,84 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <link rel="stylesheet" href="../Css/menu izquierda.css">
         <link rel="stylesheet" href="../Css/footerHeader.css">
+        <link rel="stylesheet" href="../Css/paginaPrincipal.css">
+        <link rel="stylesheet" href="../Css/drpdwn.css">
+        <link rel="stylesheet" href="../Css/estadisticas.css">
+        <link rel="stylesheet" href="../Css/formHacerPedido.css">
         <title>Administración | Agregar</title>
     </head>
     <body>
-        <header>
-            <div class="header">
-                <img src="https://yt3.ggpht.com/Y1L8TzdsdTe30KxXrueVXL8N5W9CL3JCR0oiFtlieiTJ4p24mMiDYRNHHuS9nPawWz1vEFO0BZY=s900-c-k-c0x00ffffff-no-rj" alt="UTP Logo" width="9%" height="9%">
-                <div>
-                    <h3>Universidad Tecnológica De Panamá</h3>
-                    <h1>DinerSol - Sistema De Cafeterías UTP</h1>
+        <div class="header">
+            <img src="https://yt3.ggpht.com/Y1L8TzdsdTe30KxXrueVXL8N5W9CL3JCR0oiFtlieiTJ4p24mMiDYRNHHuS9nPawWz1vEFO0BZY=s900-c-k-c0x00ffffff-no-rj" alt="UTP Logo" width="6%" height="6%">
+            <div>
+                <h3>Universidad Tecnológica De Panamá</h3>
+                <h1>DinerSol - Sistema De Cafeterías UTP</h1>
+            </div>
+        </div>
+        <div class="fotoUser">
+            <!-- <h3>Aurelio Morales</h3> -->
+            <div class="dropdown">
+                <button class="dropbtn"><b>Aurelio Morales</b></button>
+                <div class="dropdown-content">
+                  <a href="perfilDeUsuario.html">Mi Perfil</a>
+                  <a href="">Pedido</a>
+                  <a href="../index.html">Cerrar Sesión</a>
                 </div>
             </div>
-        </header>
-        <hr>
-        <h2>Administración del Menú</h2>
+            <img class="FPerfil" src="../Imagenes/user.png" alt="Foto De Perfil" width="3%" height="3%">
+        </div>
+        <nav>
+            <a href="paginaPrincipal.html">Inicio</a>
+            <a href="">Cafeterías</a>
+            <a href="">Ayuda Estudiantil</a>
+            <a href="">Historial De Compras</a>
+            <a href="estadisticas.html">Estadísticas</a>
+        </nav>
+        <div class="TituloCompleto">
+            <h1>Administrar El Menú</h1>
+        </div>
+        <div class="todo">
+            <div class="hacerPedido">
+                <div class="barraLateral">
+                    <h2>Opciones</h2>
+                    <a href="">Agregar</a>
+                    <a href="">Editar</a>
+                    <a href="">Eliminar</a>
+                    <a href="">Inventario</a><br>
+                </div>
+                <div class="otraBarra">
+                    <h2>Agregar Al Menú</h2>
+                    <img src="../Imagenes/producto.png" alt="Foto Del Producto" width="30%" height="30%"><br>
+                    <input type="file">
+                    <div class="datosProductos">
+                        <div class="datosProductos">
+                            <h3>Nombre:</h3>
+                            <input type="text" placeholder="Nombre del producto">
+                        </div>
+                        <div class="datosProductos">
+                            <h3>Cafetería:</h3>
+                            <select>
+                                <option value="1">Cafetería Central</option>
+                                <option value="2">Cafetería Del Edificio 3</option>
+                                <option value="3">Cafetería Del Edificio 1 - Planta Baja</option>
+                                <option value="4">Cafetería Del Edificio 1 - Piso 2</option>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="datosProductos">
+                        <div class="datosProductos">
+                            <h3>Precio:</h3>
+                            <input type="number" placeholder="Precio Del Producto">
+                        </div>
+                        <div class="datosProductos">
+                            <h3>Cantidad:</h3>
+                            <input type="number" placeholder="Cantidad De Productos">
+                        </div>
+                    </div>
+                </div>
+            </div><br><hr><br>
+        </div><!--
         <input type="checkbox" class="CBox" id="CBox1">
         <label class="LBel" for="CBox1">¥</label>
         <div class="LMenu">
@@ -26,50 +88,42 @@
                 <a href="EMenu.html"><li>Editar</li></a>
                 <a href="IMenu.html"><li>Inventario</li></a>
             </ul>
-            </div>
-            <div class="H">
-                <label class="SH">Agregue un menú:</label><br><br>
-            </div>
+        </div>
+        <div class="H">
+            <label class="SH">Agregue un menú:</label><br><br>
+        </div>
         <form name="RMenu" method="POST" action="../Secciones/datos.php">
             <div class="item">
-                <input type="hidden" name="fotoActual" value="<?php echo $datoUser->foto ?>"  >
-                <label for="foto">Foto:</label><br>
-                <input type="file" id="foto" name="foto"><br><br>
+                <input type="hidden" name="fotoActual" value="">
+                <label for="foto">Foto:</label>
+                <input type="file" id="foto" name="foto">
             </div>
-            <section>
-                <div class="item">
-                    <label for="nombre">Nombre del Menú:</label><br>
-                    <input type="text" id="nombre" name="nombre" placeholder="Ej: Arroz Frito" maxlength="50" required><br><br>
-                </div>
-                <label for="NCafe">Elija la Cafeteria:</label><br>
-                <select name="NCafe" id="NCafe">
-                    <option value="CCafe">Cafeteria central</option>
-                    <option value="Cafe1">Cafeteria 1</option>
-                    <option value="Cafe2">Cafeteria 2</option>
-                    <option value="Cafe3">Cafeteria 3</option>
-                    <option value="Cafe4">Cafeteria 4</option>
-                  </select>
-            </section>
-            <section>
-                <div class="item">
-                    <br><label for="CMenu">Costo:</label>
-                <br><br><input type="number" id="CMenu" name="CMenu" value="0" pattern="[0-9]+([\.,][0-9]+)?" step="0.01" maxlength="99999.00" required/><br><br>
+            <div class="item">
+                <label for="nombre">Nombre del Menú:</label><br>
+                <input type="text" id="nombre" name="nombre" placeholder="Ej: Arroz Frito" maxlength="50" required>
             </div>
-            </section>
-            <section>
-                <div class="end">
-                    <input type="reset" value="Vaciar"><br><br>
-                </div>
-            </section>
-        <section>
-            <div class="end">
-                <input type="button" id="add" value="Agregar Menú">
-            </div>
-            <div class="end"><br><br>
-                <input type="button" value="Volver al inicio" onclick="window.location.href='../Secciones/paginaPrincipal.html'"><br><br>
-            </div>
-        </section>
-    </form>
+            <label for="NCafe">Elija la Cafeteria:</label><br>
+            <select name="NCafe" id="NCafe">
+                <option value="CCafe">Cafeteria central</option>
+                <option value="Cafe1">Cafeteria 1</option>
+                <option value="Cafe2">Cafeteria 2</option>
+                <option value="Cafe3">Cafeteria 3</option>
+                <option value="Cafe4">Cafeteria 4</option>
+            </select>
+            <div class="item">
+                <label for="CMenu">Costo:</label>
+            <input type="number" id="CMenu" name="CMenu" value="0" pattern="[0-9]+([\.,][0-9]+)?" step="0.01" maxlength="99999.00" required/>
+        </div>
+        <div class="end">
+            <input type="reset" value="Vaciar">
+        </div>
+        <div class="end">
+            <input type="button" id="add" value="Agregar Menú">
+        </div>
+        <div class="end">
+            <input type="button" value="Volver al inicio" onclick="window.location.href='../Secciones/paginaPrincipal.html'">
+        </div>
+    </form>-->
     <div class="footer">
         <img src="https://yt3.ggpht.com/Y1L8TzdsdTe30KxXrueVXL8N5W9CL3JCR0oiFtlieiTJ4p24mMiDYRNHHuS9nPawWz1vEFO0BZY=s900-c-k-c0x00ffffff-no-rj" alt="UTP Logo" width="6%" height="6%">
         <h3>
