--- a/Secciones/perfilDeUsuario.html
+++ b/Secciones/perfilDeUsuario.html
@@ -33,6 +33,13 @@
         </div>
         <img class="FPerfil" src="../Imagenes/user.png" alt="Foto De Perfil" width="3%" height="3%">
     </div>
+    <nav>
+        <a href="paginaPrincipal.html">Inicio</a>
+        <a href="">Cafeterías</a>
+        <a href="">Ayuda Estudiantil</a>
+        <a href="">Historial De Compras</a>
+        <a href="estadisticas.html">Estadísticas</a>
+    </nav>
     <br><br>
 
     <!-- Seccion -->
