--- a/Secciones/estadisticas.html
+++ b/Secciones/estadisticas.html
@@ -48,8 +48,8 @@
                     <option value="3">04/10/21 - 10/10/21</option>       
                     <option value="4">27/10/21 - 03/10/21</option>
                 </select>
-                <input type="submit" value="Buscar" class="buscar">
-                <button><a href="">Generar Reportes</a></button>
+                <input type="submit" class="botones" value="Buscar" class="buscar">
+                <button class="botones"><a  href="">Generar Reportes</a></button>
             </form>
         </div><hr>
         <div class="card">
