--- a/Secciones/perfilDeUsuario.html
+++ b/Secciones/perfilDeUsuario.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="../CSS/Perfil.css">
     <link rel="stylesheet" href="../Css/paginaPrincipal.Css">
     <link rel="stylesheet" href="../Css/footerHeader.Css">
+    <link rel="stylesheet" href="../Css/estadisticas.css">
     <link rel="stylesheet" href="../Css/drpdwn.css">
     <title>DinerSol | Perfil</title>
 </head>
@@ -41,6 +42,9 @@
         <a href="">Historial De Compras</a>
         <a href="estadisticas.html">Estadísticas</a>
     </nav>
+    <div class="TituloCompleto">
+        <h1>Actualizar Perfil</h1>
+    </div><br>
     <br><br>
 
     <!-- Seccion -->
