Inventarios con Css

--- a/Secciones/adminMenuEditar.html
+++ b/Secciones/adminMenuEditar.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="../Css/drpdwn.css">
         <link rel="stylesheet" href="../Css/estadisticas.css">
         <link rel="stylesheet" href="../Css/formHacerPedido.css">
-        <title>Administración | Agregar</title>
+        <title>Administración | Editar</title>
     </head>
     <body>
         <div class="header">
