--- a/Secciones/adminMenuEliminar.html
+++ b/Secciones/adminMenuEliminar.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="../Css/drpdwn.css">
         <link rel="stylesheet" href="../Css/estadisticas.css">
         <link rel="stylesheet" href="../Css/formHacerPedido.css">
-        <title>Administración | Agregar</title>
+        <title>Administración | Eliminar</title>
     </head>
     <body>
         <div class="header">
