Avances Con PHP, Creación de combos e historial de compras

--- a/Secciones/adminMenuAgregar.html
+++ b/Secciones/adminMenuAgregar.html
@@ -31,7 +31,7 @@
             <img class="FPerfil" src="../Imagenes/user.png" alt="Foto De Perfil" width="3%" height="3%">
         </div>
         <nav>
-            <a href="paginaPrincipal.html">Inicio</a>
+            <a href="paginaPrincipal.php">Inicio</a>
             <a href="">Cafeterías</a>
             <a href="">Ayuda Estudiantil</a>
             <a href="">Historial De Compras</a>
@@ -44,10 +44,12 @@
             <div class="hacerPedido">
                 <div class="barraLateral">
                     <h2>Opciones</h2>
-                    <a href="">Agregar</a>
-                    <a href="adminMenuEditar.html">Editar</a>
-                    <a href="adminMenuEditar.html">Eliminar</a>
-                    <a href="adminMenuInventario.html">Inventario</a><br>
+                    <a href="adminCrearCombos.php">Crear Combo</a>
+                    <a href="adminEditarCombos.php">Editar Combo</a>
+                    <a href="">Agregar Producto</a>
+                    <a href="adminMenuEditar.html">Editar Producto</a>
+                    <a href="adminMenuEditar.html">Eliminar Producto</a>
+                    <a href="adminMenuInventario.php">Inventario</a><br>
                 </div>
                 <div class="otraBarra">
                     <h2>Agregar Al Menú</h2>
