--- a/Secciones/estadisticas.html
+++ b/Secciones/estadisticas.html
@@ -30,7 +30,7 @@
             <img class="FPerfil" src="../Imagenes/user.png" alt="Foto De Perfil" width="3%" height="3%">
         </div>
         <nav>
-            <a href="paginaPrincipal.html">Inicio</a>
+            <a href="paginaPrincipal.php">Inicio</a>
             <a href="">Cafeterías</a>
             <a href="">Ayuda Estudiantil</a>
             <a href="">Historial De Compras</a>
