Sección combos en paginaPrincipal, registro de combos

--- a/Secciones/footer.html
+++ b/Secciones/footer.html
@@ -3,7 +3,7 @@
     <head>
         <title>Footer</title>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="../Css/footerHeader.Css">
+        <link rel="stylesheet" href="../Css/paginaPrincipal.Css">
     </head>
     <body>
         <div class="footer">
